sample_data/00e/00e242445729961fa38b70bc9255b90526ef9a39
Error message (clang stderr):
src/main.c:58:23: error: format specifies type 'int' but the argument has type 'size_t' (aka 'unsigned long') [-Werror,-Wformat]
    printf("%d %d\n", matice->radku, matice->sloupcu);
            ~~        ^~~~~~~~~~~~~
            %zu
src/main.c:58:38: error: format specifies type 'int' but the argument has type 'size_t' (aka 'unsigned long') [-Werror,-Wformat]
    printf("%d %d\n", matice->radku, matice->sloupcu);
               ~~                    ^~~~~~~~~~~~~~~
               %zu
2 errors generated.